feat(cpp): add preferred heap allocation mode
Allow C++ output to opt into heap-backed array initializations while preserving explicitly stack-allocated objects.